force-app/main/default/objects/Contribution__c/Contribution__c.object-meta.xml
<CustomObject>
    <label>Contribution</label>
    <nameField>
        <displayFormat>Contri-{0000000}</displayFormat>
        <label>Contribution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>