force-app/main/default/objects/Contribution__c/fields/Maintenance_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Contribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Contribution</label>
    <referenceTo>Maintenance_Contribution__c</referenceTo>
    <relationshipLabel>Contributions</relationshipLabel>
    <relationshipName>Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>